syntax = "proto3";

package com.casino.game.grpc;

option java_multiple_files = true;
option java_package = "com.casino.game.grpc";

service GameService {
  rpc ExecuteSpin (SpinRequest) returns (SpinResponse);

  rpc GetBalance (BalanceRequest) returns (BalanceResponse);

  rpc Register (AuthRequest) returns (AuthResponse);
  rpc Login (AuthRequest) returns (AuthResponse);
}

message SpinRequest {
  string playerId = 1;
  int64 betAmount = 2;
}

message SpinResponse {
  string spinId = 1;
  repeated int32 numbers = 2;
  int64 winAmount = 3;
  int64 finalBalance = 4;
  repeated int32 winningLines = 5;
}

message BalanceRequest {
  string playerId = 1;
}

message BalanceResponse {
  int64 balance = 1;
}

message AuthRequest {
  string username = 1;
  string password = 2;
}

message AuthResponse {
  bool success = 1;
  string message = 2;
  string playerId = 3;
}